Finally fix the global horizontal scroll issue???

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -191,8 +191,11 @@ body {
   }
 
   #header {
-    left: 1rem;
-    right: 1rem;
+    left: 0;
+    right: 0;
+
+    max-width: calc(100% - 2rem);
+    overflow-x: clip !important;
   }
 }
 
